<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SZDB</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_activity_ustawienia">UstawieniaActivity</string>
    <string name="title_activity_dochody">DochodyActivity</string>
    <string name="title_activity_wydatki">WydatkiActivity</string>
    <string name="title_activity_plany">PlanyActivity</string>
    <string name="title_activity_zestawienie">ZestawienieActivity</string>
    <string name="buttonMain">Dalej</string>
    <string name="buttonMenuZestawienie">Zestawienie</string>
    <string name="buttonMenuPlanowanie">Planowanie</string>
    <string name="buttonMenuDWydatki">Dodaj Wydatki</string>
    <string name="buttonMenuDDochody">Dodaj Dochody</string>
    <string name="buttonMenuWydatki">Wydatki</string>
    <string name="buttonMenuDochody">Dochody</string>
    <string name="buttonMenuUstawienia">Ustawienia</string>
    <string name="title_activity_wydatki_dodaj">WydatkiDodajActivity</string>
    <string name="title_activity_dochody_dodaj">DochodyDodajActivity</string>
    <string name="buttonMenuClose">Zamknij</string>
    <string name="hintUstawieniaOd">Podaj datę rozpoczęcia okresu</string>
    <string name="hintUstawieniaDo">Podaj datę zakończenia okresu</string>
    <string name="buttonUstawienia">Dodaj</string>
    <string name="textViewDDochody1">Dodaj swoje dochody</string>
    <string name="textViewDDochody2">Wybierz kategorię dochodów</string>
    <string name="textViewDDochody3">Albo dodaj kategorię dochodów</string>
    <string name="editTextDDochodyKwota">Podaj kwotę</string>
    <string name="editTextDDochodyData">Podaj datę dochodu</string>
    <string name="editTextDDochodyKategoria">Podaj nazwę kategorii</string>
    <string name="buttonDDochodyKategoria">Dodaj kategorię</string>
    <string name="buttonDDochodyDodaj">Dodaj dochód</string>
    <string name="textViewDochody">Zestaw wszystkich dochodów</string>
    <string name="textViewDWydatki1">Dodaj swoje wydatki</string>
    <string name="textViewDWydatki2">Wybierz kategorię wydatków</string>
    <string name="textViewDWydatki3">Albo podaj kategorie wydatków</string>
    <string name="buttonDWydatkiDodaj">Dodaj wydatek</string>
    <string name="toggleButtonDWydatkiOff">Kategoria</string>
    <string name="toggleButtonDWydatkiOn">Subkategoria</string>
    <string name="Zmiana">New ToggleButton</string>
    <string name="toggleButtonDWydatki">Kategoria/Subkategoria</string>
    <string name="textViewWydatki">Zestawienie wszystkich wydatków</string>
    <string name="radioButtonUstawieniaOkres">Okresy</string>
    <string name="radioButtonUstawieniaKDO">Kat.Doch</string>
    <string name="radioButtonUstawieniaKWY">Kat.Wyd</string>
    <string name="radioButtonUstawieniaSUB">Subk.</string>
    <string name="buttonPlanyDodaj">Dodaj zakup do zaplanowania</string>
    <string name="editTextPlanyOd">Podaj datę od kiedy chcesz oszczędzać</string>
    <string name="editTextPlanyDo">Podaj planowaną datę zakupu</string>
    <string name="editTextPlanyCo">Podaj nazwę przedmiotu</string>
    <string name="textViewWynik">W tym okresie musisz odłożyć:</string>
    <string name="editTextPlanyCena">Podaj cenę planowanej rzeczy</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="textViewPlany">Lista planowanych inwestycji:</string>

</resources>
