<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="android.szdb.mbaz.MenuActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMenuZestawienie"
            android:id="@+id/buttonMenuZestawienie" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMenuDWydatki"
            android:id="@+id/buttonMenuDWydatki" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMenuDDochody"
            android:id="@+id/buttonMenuDDochody" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMenuWydatki"
            android:id="@+id/buttonMenuWydatki" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMenuDochody"
            android:id="@+id/buttonMenuDochody" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMenuPlanowanie"
            android:id="@+id/buttonMenuPlanowanie" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMenuUstawienia"
            android:id="@+id/buttonMenuUstawienia" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonMenuClose"
            android:id="@+id/buttonMenuClose" />
    </LinearLayout>
</RelativeLayout>
