<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="android.szdb.mbaz.PlanyActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextPlanyOd"
        android:hint="@string/editTextPlanyOd"
        android:inputType="date"
        android:layout_below="@+id/editTextPlanowanieCo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextPlanyDo"
        android:layout_below="@+id/editTextPlanyOd"
        android:layout_alignParentStart="true"
        android:hint="@string/editTextPlanyDo"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/editTextPlanowanieCo"
        android:hint="@string/editTextPlanyCo"
        android:inputType="text"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTextPlanyOd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/editTextPlanyCena"
        android:hint="@string/editTextPlanyCena"
        android:layout_below="@+id/editTextPlanyDo"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editTextPlanyDo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonPlanyDodaj"
        android:id="@+id/buttonPlanyDodaj"
        android:layout_below="@+id/editTextPlanyCena"
        android:layout_alignEnd="@+id/editTextPlanyCena"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewWynik"
        android:id="@+id/textViewWynik"
        android:layout_below="@+id/buttonPlanyDodaj"
        android:layout_alignEnd="@+id/listViewPlany"
        android:layout_alignParentStart="true" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewPlany"
        android:layout_below="@+id/textViewWynik"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
