<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="android.szdb.mbaz.UstawieniaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/textViewUstawienia"
        android:id="@+id/textViewUstawienia"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/listViewUstawienia" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextUstawieniaOd"
        android:layout_below="@+id/textViewUstawienia"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textViewUstawienia"
        android:hint="@string/hintUstawieniaOd" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:id="@+id/editTextUstawieniaDo"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editTextUstawieniaOd"
        android:layout_alignEnd="@+id/editTextUstawieniaOd"
        android:hint="@string/hintUstawieniaDo" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonUstawienia"
        android:id="@+id/buttonUstawienia"
        android:layout_below="@+id/editTextUstawieniaDo"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/listViewUstawienia" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewUstawienia"
        android:layout_below="@+id/buttonUstawienia"
        android:layout_alignParentStart="true"
        android:choiceMode="multipleChoice" />
</RelativeLayout>
